--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "academy",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kushovka.github.io/-",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
